--- a/cli/src/jvmMain/resources/project/composeApp/src/webMain/resources/index.html
+++ b/cli/src/jvmMain/resources/project/composeApp/src/webMain/resources/index.html
@@ -3,11 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" href="composeApp.js" as="script">
     <title>{{app_name}}</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
-    <script type="application/javascript" src="composeApp.js"></script>
+    <style>
+        body, html {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background: #000;
+        }
+        #iframe-container {
+            width: 100%;
+            height: 100%;
+            position: relative;
+        }
+        iframe {
+            border: none;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 1;
+            transition: opacity 0.2s ease-in-out;
+        }
+        #initial-loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 2000;
+            flex-direction: column;
+            color: white;
+            font-family: sans-serif;
+            gap: 20px;
+        }
+        .big-spinner {
+            width: 48px;
+            height: 48px;
+            border: 5px solid rgba(255, 255, 255, 0.3);
+            border-left-color: #fff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+    </style>
 </head>
 <body>
+<div id="initial-loader">
+    <div class="big-spinner"></div>
+    <span>Loading Application...</span>
+</div>
+
+<div id="iframe-container">
+    <iframe id="current-app" src="app.html"></iframe>
+</div>
+
+<div id="rebuilding-indicator" style="display: none; position: fixed; top: 16px; right: 16px; z-index: 1000; background: rgba(0,0,0,0.7); color: white; padding: 12px 20px; border-radius: 8px; font-family: sans-serif; box-shadow: 0 4px 12px rgba(0,0,0,0.3); align-items: center; gap: 12px;">
+    <div class="spinner"></div>
+    <div style="display: flex; flex-direction: column;">
+        <span id="rebuild-status" style="font-weight: bold; font-size: 14px;">Rebuilding...</span>
+        <span id="rebuild-timer" style="font-size: 12px; opacity: 0.8;">0.0s</span>
+    </div>
+</div>
+
+<script type="application/javascript">
+    const indicator = document.getElementById('rebuilding-indicator');
+    const statusElement = document.getElementById('rebuild-status');
+    const timerElement = document.getElementById('rebuild-timer');
+    const iframeContainer = document.getElementById('iframe-container');
+    const initialLoader = document.getElementById('initial-loader');
+
+    const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+    const wsUrl = `${protocol}//${window.location.hostname}:8080/dev-server`;
+
+    let startTime = null;
+    let timerInterval = null;
+    let nextIframe = null;
+
+    function startTimer() {
+        if (timerInterval) return;
+        startTime = Date.now();
+        statusElement.innerText = 'Rebuilding...';
+        indicator.style.display = 'flex';
+        timerInterval = setInterval(() => {
+            const elapsed = (Date.now() - startTime) / 1000;
+            timerElement.innerText = elapsed.toFixed(1) + 's';
+        }, 100);
+    }
+
+    function stopTimer() {
+        if (timerInterval) {
+            clearInterval(timerInterval);
+            timerInterval = null;
+        }
+        indicator.style.display = 'none';
+    }
+
+    function swapIframes() {
+        if (!nextIframe) return;
+
+        const currentIframe = document.getElementById('current-app');
+
+        // Make next visible, current hidden
+        nextIframe.classList.remove('hidden-iframe');
+        currentIframe.classList.add('hidden-iframe');
+
+        // After transition, cleanup old one
+        setTimeout(() => {
+            currentIframe.remove();
+            nextIframe.id = 'current-app';
+            nextIframe = null;
+            stopTimer();
+        }, 300);
+    }
+
+    window.addEventListener('message', (event) => {
+        if (event.data === 'compose-ready') {
+            if (initialLoader) {
+                initialLoader.style.display = 'none';
+            }
+            if (nextIframe) {
+                swapIframes();
+            } else {
+                // Initial load or something went wrong, just hide indicator if it was showing
+                stopTimer();
+            }
+        }
+    });
+
+    function connect() {
+        const socket = new WebSocket(wsUrl);
+
+        socket.onmessage = function(event) {
+            const data = event.data;
+            if (data === 'rebuilding') {
+                startTimer();
+            } else if (data.startsWith('reload')) {
+                statusElement.innerText = 'Downloading...';
+                const files = data.split(':')[1]?.split(',') || [];
+
+                // Start background download
+                const downloadPromise = files.length > 0
+                    ? Promise.all(files.map(file => fetch(file, { cache: 'reload' }).then(r => r.arrayBuffer())))
+                    : Promise.resolve();
+
+                downloadPromise.then(() => {
+                    // Create new iframe hidden
+                    nextIframe = document.createElement('iframe');
+                    nextIframe.className = 'hidden-iframe';
+                    iframeContainer.appendChild(nextIframe);
+                    // Set src AFTER appending to DOM to ensure it starts loading
+                    // The files should now be in the browser's disk/memory cache
+                    nextIframe.src = 'app.html';
+                }).catch(err => {
+                    console.error('Failed to pre-fetch files, reloading current anyway:', err);
+                    window.location.reload(); // Fallback to full reload if background fails
+                });
+            } else if (data === 'error') {
+                stopTimer();
+            }
+        };
+
+        socket.onclose = function() {
+            setTimeout(connect, 1000);
+        };
+    }
+
+    connect();
+</script>
 </body>
 </html>
